[gd_scene load_steps=9 format=3 uid="uid://5km44hs3bayt"]

[ext_resource type="Script" path="res://states/connected/connected.gd" id="1_nv0uo"]
[ext_resource type="Theme" uid="uid://8i7biu4ku8gp" path="res://resources/game_theme.tres" id="2_7p3ru"]
[ext_resource type="Script" path="res://classes/log/log.gd" id="2_7x5jj"]
[ext_resource type="PackedScene" uid="uid://c7nkhrjws5emw" path="res://classes/login_form/login_form.tscn" id="3_g4efe"]
[ext_resource type="Shader" path="res://resources/background_effect.gdshader" id="3_scbe6"]
[ext_resource type="Texture2D" uid="uid://cpvstjd3l3gg2" path="res://resources/floor.svg" id="3_ua61x"]
[ext_resource type="PackedScene" uid="uid://bbvvcyjuidvji" path="res://classes/register_form/register_form.tscn" id="4_nvgex"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bei5g"]
shader = ExtResource("3_scbe6")
shader_parameter/amplitutde = Vector2(1, 0)
shader_parameter/speed = Vector2(1, 0)

[node name="Connected" type="Node"]
script = ExtResource("1_nv0uo")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_7p3ru")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/bold_font_size = 48
bbcode_enabled = true
text = "[center][rainbow][shake][b]Radius Rumble[/b][/shake][/rainbow][/center]"
fit_content = true

[node name="LoginForm" parent="UI/MarginContainer/VBoxContainer" instance=ExtResource("3_g4efe")]
layout_mode = 2

[node name="RegisterForm" parent="UI/MarginContainer/VBoxContainer" instance=ExtResource("4_nvgex")]
visible = false
layout_mode = 2

[node name="RegisterPrompt" type="RichTextLabel" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]Don't have an account? [color=#E3A071][url=register]Create one here![/url][/color][/center]"
fit_content = true

[node name="Log" type="RichTextLabel" parent="UI/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
scroll_following = true
script = ExtResource("2_7x5jj")

[node name="Background" type="Node2D" parent="."]

[node name="Background" type="Sprite2D" parent="Background"]
texture_repeat = 2
material = SubResource("ShaderMaterial_bei5g")
texture = ExtResource("3_ua61x")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 1152, 648)
